--- a/ExamplePlugin/ExamplePlugin.csproj
+++ b/ExamplePlugin/ExamplePlugin.csproj
@@ -5,6 +5,10 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <OutputPath>C:\Users\vicen\source\repos\ArchitecturalComputation\ExamplePlugin\ExamplePlugin\bin</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="RhinoCommon" Version="6.21.19351.9141" />
   </ItemGroup>
