--- a/ExamplePlugin/Properties/launchSettings.json
+++ b/ExamplePlugin/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "ExamplePlugin": {
       "commandName": "Executable",
-      "executablePath": "C:\\Program Files\\Rhino 6\\System\\Rhino.exe"
+      "executablePath": "C:\\Program Files\\Rhino 6\\System\\Rhino.exe",
+      "commandLineArgs": "/nosplash"
     }
   }
 }
